Попытки делать оптимизацию с помощью ограниченных градиентных векторов

--- a/Noise/Noise.csproj
+++ b/Noise/Noise.csproj
@@ -41,8 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OldPerlin.cs" />
-    <Compile Include="Perlin experimental 1.cs" />
+    <Compile Include="PerlinExp2.cs" />
+    <Compile Include="PerlinExp1.cs" />
     <Compile Include="Perlin.cs" />
+    <Compile Include="PerlinExp3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
