--- a/Noise/Noise.csproj
+++ b/Noise/Noise.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Compile Include="OldPerlin.cs" />
     <Compile Include="PerlinExp2.cs" />
-    <Compile Include="PerlinExp1.cs" />
+    <Compile Include="PerlinMultidimensional.cs" />
     <Compile Include="Perlin.cs" />
     <Compile Include="PerlinExp3.cs" />
     <Compile Include="PerlinFin.cs" />
