--- a/Noise/Noise.csproj
+++ b/Noise/Noise.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OldPerlin.cs" />
+    <Compile Include="PerlinFinNormalized.cs" />
     <Compile Include="PerlinExp2.cs" />
     <Compile Include="PerlinMultidimensional.cs" />
     <Compile Include="Perlin.cs" />
