--- a/PlanetGenerator/GeneratorForm.csproj
+++ b/PlanetGenerator/GeneratorForm.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
     <Compile Include="Form_contol.cs">
       <SubType>Form</SubType>
     </Compile>
